--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <input id="fnameinp" placeholder="first name"><br><br>
 <input id="lnameinp" placeholder="last name"><br><br>
 <input id="birthinpt" placeholder="birth year"><br><br>
-<input id="countryinp" placeholder="living"><br><br>
+<input id="countryinp" placeholder="living at"><br><br>
 <input type="number" id="idinp" placeholder="id"><br><br>
 <button type="button" id="exe1btn">send</button><br><br>
 
